<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_medium"
            android:text="@string/strCodigo"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/lblCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_medium"
            android:text="@string/strCodigo"
            android:textAlignment="textStart" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_medium"
            android:text="@string/strDetalle"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strCantidad"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/lblPrecioUnitario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strPrecioUnitario"
                android:textAlignment="viewStart" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_medium"
            android:text="@string/strTotal"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_medium"
            android:text="@string/strTotal"
            android:textAlignment="textEnd" />

    </LinearLayout>


</LinearLayout>
