<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/strNombreEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/gotham_rounded_medium"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:text="@string/nombreEmpresa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.6"
                    android:fontFamily="@font/gotham_rounded_medium"
                    android:text="@string/titFletero"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/strNombreFletero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gotham_rounded_medium"
                    android:text="@string/nombreFletero"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.65"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/gotham_rounded_medium"
                    android:text="@string/titNumerodeCaja"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtCaja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/titNumerodeCaja"
                    android:ems="1"
                    android:fontFamily="@font/gotham_rounded_medium"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.46"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/gotham_rounded_medium"
                    android:text="@string/titPlanilla"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtPlanilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/titPlanilla"
                    android:ems="1"
                    android:fontFamily="@font/gotham_rounded_medium"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAceptarPlanilla"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/boton_redondo_morado"
                    android:fontFamily="@font/gotham_rounded_medium"
                    android:text="@string/bntAceptar"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:srcCompat="@drawable/icono_idus128" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>