<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RendicionFinalActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangulo_degrade"
            android:orientation="vertical">

            <TextView
                android:id="@+id/strNombreFletero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/nombreFletero"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/strPlanilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/titPlanilla"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRendicionConfirmar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boton_redondeado"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/confirmar"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRendicionCancelar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondeado"
                android:backgroundTint="@android:color/holo_red_light"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strCancelar"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strARendir"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/strARendir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strARendir"
                android:textAlignment="textEnd"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/strTotalRendicion"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strTotalRendido"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/strTotalGralRendicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strTotalRendido"
                android:textAlignment="textEnd"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strDiferencia"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/strDiferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_rounded_medium"
                android:text="@string/strDiferencia"
                android:textAlignment="textEnd"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pBarRendicion"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="37dp">

            <ListView
                android:id="@+id/listRendicion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>