<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/artDevolver"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/lblCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:fontFamily="@font/gotham_rounded_medium"
        android:text="@string/strCantidad"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- <TextView
        android:id="@+id/editCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/gotham_rounded_medium"
        android:hint="@string/strCantidad"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCantidad" /> -->


    <TextView
        android:id="@+id/lblDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gotham_rounded_medium"
        android:text="@string/strDetalle"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/txtTotal"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/lblCantidad"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPrecioUnitario"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/gotham_rounded_medium"
        android:text="@string/strPrecioUnitario"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@+id/lblCantidad"
        app:layout_constraintTop_toBottomOf="@+id/lblDetalle" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/gotham_rounded_medium"
        android:text="@string/strTotal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/gotham_rounded_medium"
        android:text="@string/strTotal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <EditText
        android:id="@+id/editCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:editable="false"
        android:ems="3"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCantidad" />

    <CheckBox
        android:id="@+id/checkArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>